--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho_menu">
+            <a class="cabecalho_menu_link" href="index.html">Home</a>
+            <a class="cabecalho_menu_link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
@@ -22,13 +27,26 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">GitHub</a>
+                <h2 class="apresentacao__links_subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="https://github.com/pff4">
+                    <img src="./assets/github.png" alt="">
+                    Github
+                </a>
+                <a class="apresentacao__links__link" href="https://linkedin.com/pff4">
+                    <img src="./assets/linkedin.png" alt="">
+                    linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://www.twitch.tv/ferreiracsgaming">
+                    <img src="./assets/twitch.png" alt="">
+                    Twitch
+                </a>
             </div>
         </section>
-        <img src="imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por F Tech</p>
+    </footer>
 </body>
 
 </html>
